# lolipy

./: .gitignore  CHANGELOG  README.md  pyproject.toml  update_corpora.sh
examples/: alternate_letterforms.py  apollo_dialogue.py  board_game_generator.py  dinosaur_names.py  ebooks_quotes.py  gibberish_tweet.py  markov_text.py  mashteroids.py  mosaic_art.py  random_tables.py  sonnet_generator.py  text_corruptor.py  typewriter_sim.py  word_generator.py
lolipy/: __init__.py  alphabet.py  corpora.py  ebooks.py  example.py  gibberish.py  gutenberg.py  ia.py  letterforms.py  mosaic.py  pycorpora.py  queneau.py  randomness.py  typewriter.py
lolipy/data/: __init__.py
olipy/: __init__.py  alphabet.py  corpora.py  ebooks.py  example.py  gibberish.py  ia.py  letterforms.py  markov.py  mosaic.py  pycorpora.py  queneau.py  tokenizer.py  typewriter.py
