[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "lolipy"
version = "2.1.0"
description = "Python library for artistic text generation"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "Leonard Richardson", email = "leonardr@segfault.org" }
]
dependencies = [
    "textblob",
    "wordfilter",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing",
    "Topic :: Artistic Software",
]

[project.optional-dependencies]
ia = ["internetarchive", "requests"]
all = ["internetarchive", "requests"]

[project.urls]
Homepage = "https://github.com/charlesreid1/lolipy/"

[project.scripts]
"lolipy.apollo" = "lolipy.example:apollo"
"lolipy.board_games" = "lolipy.example:board_games"
"lolipy.corrupt" = "lolipy.example:corrupt"
"lolipy.dinosaurs" = "lolipy.example:dinosaurs"
"lolipy.ebooks" = "lolipy.example:ebooks"
"lolipy.gibberish" = "lolipy.example:gibberish"
"lolipy.mashteroids" = "lolipy.example:mashteroids"
"lolipy.sonnet" = "lolipy.example:sonnet"
"lolipy.typewriter" = "lolipy.example:typewriter"
"lolipy.words" = "lolipy.example:words"

[tool.setuptools.packages.find]
include = ["lolipy*"]

[tool.setuptools.package-data]
lolipy = ["data/**/*.json"]

